crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@bool__false.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/bool/false.panda
---
Ok(
    Bool(
        Bool {
            b: false,
        },
    ),
)
